--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
     <include
@@ -30,7 +31,8 @@
         android:src="@drawable/ic_baseline_add"
         android:padding="10dp"
         android:layout_marginBottom="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginEnd="20dp"
+        android:contentDescription="@string/fabtodo">
     </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 </RelativeLayout>
