--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,83 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/register"
     tools:context=".RegisterActivity">
 
-    <ImageView
-        android:id="@+id/register_image"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:src="@drawable/signup_photo"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:scaleType="fitCenter">
-    </ImageView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="36sp"
+        android:text="@string/sign_up"
+        android:layout_marginTop="108dp"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/white"/>
 
     <EditText
         android:id="@+id/register_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/register_image"
-        android:hint="Email..."
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginRight="30dp"
+        android:hint="@string/email"
         android:inputType="textEmailAddress"
-        android:background="@drawable/inputs"
-        android:padding="4dp"
-        android:drawableStart="@drawable/email"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="17dp">
-    </EditText>
+        android:padding="16dp"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFF"
+        android:autofillHints="" />
 
     <EditText
         android:id="@+id/register_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/register_email"
-        android:hint="Password..."
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="30dp"
+        android:hint="@string/password"
         android:inputType="textPassword"
-        android:background="@drawable/inputs"
-        android:padding="4dp"
-        android:drawableStart="@drawable/password"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="17dp"
-        android:layout_marginRight="17dp">
-    </EditText>
+        android:padding="16dp"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFFFF"
+        android:autofillHints="" />
 
     <Button
         android:id="@+id/register_button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/register_password"
-        android:padding="4dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginLeft="19dp"
-        android:layout_marginRight="19dp"
-        android:text="Create Account"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:background="@drawable/buttons"
+        android:text="@string/create_account"
         android:textAllCaps="false"
-        android:textSize="24sp"
         android:textColor="@color/cardview_light_background"
-        android:background="@drawable/buttons">
-    </Button>
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/already_have_account_link"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_below="@+id/register_button"
-        android:text="Already have an account ? Login Here!"
-        android:layout_marginTop="10dp"
+        android:layout_alignParentStart="true"
         android:layout_marginLeft="17dp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="17dp"
+        android:text="@string/log_in"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="15sp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark">
-    </TextView>
+        android:textStyle="bold"/>
 
 </RelativeLayout>
